<resources>
    <string name="app_name">KalCalc</string>

    <string name="title_activity_splash_screen">KalCalc</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="textview">KalCalc</string>
    <string name="searchText">Search foods...</string>
    <string name="confirm_meal">CONFIRM MEAL</string>
    <string name="reset_list">RESET MEAL</string>
    <string name="toggle_for_using_portions_instead_of_grams">Use portions instead of grams:</string>
    <string name="x">x</string>
    <string name="grams_or_portions">grams or portions...</string>
    <string name="add_food_to_meal">ADD FOOD TO MEAL</string>
    <string name="save_meal">SAVE MEAL</string>
    <string name="plus">+</string>
    <string name="ssimage">ssimage</string>
</resources>
