<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignWithParentIfMissing="false"
    android:layout_centerHorizontal="true"
    android:backgroundTint="#FFFFFF"
    android:visibility="visible"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/searchList"
        android:layout_width="360dp"
        android:layout_height="160dp"
        android:layout_marginTop="4dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="src_over"
        android:elevation="1dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchText">

    </ListView>

    <EditText
        android:id="@+id/searchText"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/searchText"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/quantityText"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/grams_or_portions"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchText" />

    <TextView
        android:id="@+id/foodName"
        android:layout_width="170dp"
        android:layout_height="33dp"
        android:layout_marginTop="28dp"
        android:background="#FFFFFF"
        android:backgroundTint="#E4E4E4"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchText" />

    <Button
        android:id="@+id/delete"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:text="@string/x"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/foodName"
        app:layout_constraintEnd_toEndOf="@+id/foodName"
        app:layout_constraintTop_toTopOf="@+id/foodName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ToggleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/toggle_for_using_portions_instead_of_grams"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodName" />

    <Switch
        android:id="@+id/usePortions"
        android:layout_width="50dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:foregroundTint="#00159C"
        android:shadowColor="#AEAEAE"
        android:thumbTint="#EFEDED"
        android:trackTint="#01159A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/ToggleText"
        app:layout_constraintTop_toBottomOf="@+id/quantityText" />

    <ListView
        android:id="@+id/mealList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/resetListBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFoodToMeal" />

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:keepScreenOn="false"
        android:text="@string/confirm_meal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/resetListBtn"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:keepScreenOn="false"
        android:text="@string/reset_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addFoodToMeal"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_food_to_meal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usePortions" />

</androidx.constraintlayout.widget.ConstraintLayout>